--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,8 @@ jasypt.encryptor.password=Sainaa123
 jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
 
 
+report.subreport.dir=uploads/reports/jrxml/
+report.output.dir=generated_reports/
+
 
 logging.level.org.mockito=DEBUG
