--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 logging.level.org.springframework.jdbc.datasource=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.hibernate.engine.jdbc.connections=DEBUG
